--- a/public_html/styles/homepage.css
+++ b/public_html/styles/homepage.css
@@ -21,6 +21,30 @@
     vertical-align: middle;
 }
 
+.main-menu-cont-mobi {
+    display: none;
+}
+
+.main-menu-cont-mobi .drop-menu_icon-cont {
+    display: inline-block;
+    width: 35px;
+    padding-left: 20px;
+    vertical-align: middle;
+    overflow: hidden;
+}
+
+.main-menu-cont-mobi .drop-menu_icon.close {
+    height: 25px;
+    position: relative;
+    right: -1px;
+}
+
+.main-menu-cont-mobi .drop-menu_icon.open {
+    height: 25px;
+    position: relative;
+    right: 37px;
+}
+
 .page-cont-max-width {
     max-width: 1250px;
     margin: 0 auto;
@@ -856,4 +880,81 @@
     font-family: Calibri;
     font-size: 1.0em;
     border-top: 1px solid #6cb5ff;
+}
+
+/*switch view to mobile*/
+@media only screen and (max-width: 1000px) {
+    .main-menu-cont {
+        display: none;
+    }
+
+    .main-menu-cont-mobi {
+        display: table-cell;
+        width: 100%;
+        padding-right: 30px;
+        vertical-align: middle;
+    }
+
+    .headline-left-bg-img {
+        display: none;
+    }
+
+    #headline-cont {
+        text-align: center
+    }
+
+    #headline-cont .headline {
+        padding: 130px 20px 0 20px;
+    }
+
+    #headline-cont .sub-headline {
+        margin: 0 auto;
+    }
+
+    .package-panel-cont .package-panel {
+        display: block;
+        width: unset;
+        padding-bottom: 30px;
+    }
+
+    .service-panel-cont .service-panel {
+        display: block!important;
+        width: unset!important;
+        padding-bottom: 30px!important;
+    }
+
+    .about-crypto-section-cont {
+        padding-top: 20px;
+        padding-bottom: 100px;
+    }
+
+    .about-crypto-headline-cont {
+        left: 0;
+        top: 0;
+        width: unset;
+        padding: 30px 20px 20px 20px;
+    }
+
+    .about-crypto-img-cont {
+        display: block;
+        top: 0;
+        width: unset;
+    }
+
+    .about-crypto-cont {
+        display: block;
+        width: unset;
+    }
+
+    .crypto-statistics-section .title-cont {
+        padding: 0 20px;
+    }
+
+    #crypto-st-table-cont .table-wrapper {
+        overflow-x: scroll;
+    }
+
+    #crypto-st-table-cont table {
+        min-width: 1100px;
+    }
 }
