--- a/public_html/styles/register.css
+++ b/public_html/styles/register.css
@@ -1,14 +1,104 @@
 /*Register css*/
 
+ /********custom wait animation********/
+ .vt-bars-anim-cont {
+     display: table;
+     padding-top: 8px;
+     padding-left: 6px;
+ }
+
+ .vt-bars-anim-cont .vt-bar-cont {
+     display: table-cell;
+     vertical-align: middle;
+     width: 4px;
+     height: 16px;
+     padding-left: 1px;
+     padding-right: 1px;
+ }
+
+ .vt-bars-anim-cont .vt-bar-cont .vt-bar-1,
+ .vt-bars-anim-cont .vt-bar-cont .vt-bar-2,
+ .vt-bars-anim-cont .vt-bar-cont .vt-bar-3 {
+     width: 100%;
+     height: 10px;
+ }
+
+ .vt-bars-anim-cont .vt-bar-cont .vt-bar-1 {
+     -webkit-animation: expand-1 0.8s linear infinite;
+     animation: expand-1 0.8s linear infinite;
+ }
+
+  @-webkit-keyframes expand-1 {
+    0% { height: 16px; background-color: #037ad8;}
+    33% { height: 16px; background-color: #037ad8;}
+    34% { height: 10px; background-color: #3fa0ef;}
+    100% { height: 10px; background-color: #3fa0ef;}
+  }
+  @keyframes expand-1 {
+    0% { height: 16px; background-color: #037ad8;}
+    33% { height: 16px; background-color: #037ad8;}
+    34% { height: 10px; background-color: #3fa0ef;}
+    100% { height: 10px; background-color: #3fa0ef;}
+  }
+
+  .vt-bars-anim-cont .vt-bar-cont .vt-bar-2 {
+    -webkit-animation: expand-2 0.8s linear infinite;
+    animation: expand-2 0.8s linear infinite;
+  }
+
+  @-webkit-keyframes expand-2 {
+    0% { height: 10px; background-color: #3fa0ef; }
+    33% { height: 10px; background-color: #3fa0ef; }
+    34% { height: 16px; background-color: #037ad8; }
+    66% { height: 16px; background-color: #037ad8; }
+    67% { height: 10px; background-color: #3fa0ef; }
+    100% { height: 10px; background-color: #3fa0ef; }
+  }
+  @keyframes expand-2 {
+    0% { height: 10px; background-color: #3fa0ef;}
+    33% { height: 10px; background-color: #3fa0ef;}
+    34% { height: 16px; background-color: #037ad8; }
+    66% { height: 16px; background-color: #037ad8; }
+    67% { height: 10px; background-color: #3fa0ef; }
+    100% { height: 10px; background-color: #3fa0ef; }
+  }
+
+  .vt-bars-anim-cont .vt-bar-cont .vt-bar-3 {
+    -webkit-animation: expand-3 0.8s linear infinite;
+    animation: expand-3 0.8s linear infinite;
+  }
+
+  @-webkit-keyframes expand-3 {
+    0% { height: 10px; background-color: #3fa0ef; }
+    66% { height: 10px; background-color: #3fa0ef; }
+    67% { height: 16px; background-color: #037ad8; }
+    100% { height: 16px; background-color: #037ad8; }
+  }
+  @keyframes expand-3 {
+    0% { height: 10px; background-color: #3fa0ef; }
+    66% { height: 10px; background-color: #3fa0ef; }
+    67% { height: 16px; background-color: #037ad8; }
+    100% { height: 16px; background-color: #037ad8; }
+  }
+
 .shadow {
     box-shadow: 0px 1px 8px 2px gray;
+}
+
+.hide-elem {
+    visibility: hidden;
+}
+
+.remove-elem {
+    display: none;
 }
 
 .signup-cont {
     display: table;
     width: 100%;
-    max-width: 700px;
-    height: 500px;
+    max-width: 730px;
+    min-width: 330px;
+    height: 530px;
     margin-top: 5%;
     background-color: white;
 }
@@ -16,6 +106,7 @@
 .signup-cont .left-section-cont {
     position: relative;
     display: table-cell;
+    vertical-align: top;
     min-width: 300px;
     border-radius: 8px 0 0 8px;
     overflow: hidden;
@@ -23,6 +114,7 @@
 
 .signup-cont .left-section-cont .bg-pattern-wrapper {
     position: absolute;
+    height: 100%;
     z-index: 50;
 }
 
@@ -55,7 +147,7 @@
 
 .signup-cont .left-section-cont .bg-image {
     position: absolute;
-    top: 90px;
+    top: 120px;
     left: 70px;
     width: 164px;
     height: 300px;
@@ -102,7 +194,9 @@
 }
 
 .signup-cont .form-cont {
+    position: relative;
     display: table-cell;
+    vertical-align: top;
     width: 100%;
     overflow: hidden;
 }
@@ -115,15 +209,30 @@
     background: linear-gradient(150deg, rgb(0, 120, 215), rgb(65, 161, 240)); /* Standard syntax */
 }
 
-.signup-cont .form-cont .form-slide-wrapper {
+#form-slide-wrapper {
     position: relative;
-    left: 0px;
     width: 300%;
+    z-index: 50;
 }
 
-.signup-cont .form-cont .form-slide-wrapper .form-1,
-.signup-cont .form-cont .form-slide-wrapper .form-2,
-.signup-cont .form-cont .form-slide-wrapper .form-3 {
+#form-slide-wrapper.navi-form-1 {
+    left: 0%;
+    transition: left 0.5s;
+}
+
+#form-slide-wrapper.navi-form-2 {
+    left: -100%;
+    transition: left 0.5s;
+}
+
+#form-slide-wrapper.navi-form-3 {
+    left: -200%;
+    transition: left 0.5s;
+}
+
+#form-slide-wrapper .form-1,
+#form-slide-wrapper .form-2,
+#form-slide-wrapper .form-3 {
     float: left;
     width: 33.3%;
     padding-left: 40px; 
@@ -131,7 +240,7 @@
     box-sizing: border-box;
 }
 
-.signup-cont .form-cont .form-slide-wrapper .form-header-title {
+#form-slide-wrapper .form-header-title {
     text-align: center;
     font-family: Calibri;
     font-size: 1.3em;
@@ -140,40 +249,530 @@
     margin-top: 40px;
 }
 
-input[type=text] {
+#err-msg-box {
+    position: absolute;
     width: 100%;
-    padding-left: 10px;
-    font-family: Calibri;
+    max-width: 260px;
+    min-height: 45px;
+    border-radius: 6px;
+    background-color: #3297ea;
+    box-shadow: 1px 3px 4px 0px grey;
+    z-index: 200;
+}
+
+#err-msg-box .close-btn {
+    position: absolute;
+    top: 2px;
+    right: 2px;
+    width: 25px;
+    height: 25px;
+    text-align: center;
+    cursor: pointer;
+}
+
+#err-msg-box .close-btn > span {
     font-size: 1.2em;
+    color: white;
+    padding-top: 2px;
+}
+
+#err-msg-box.left-pointer .pointer {
+    left: 30px;
+}
+
+#err-msg-box.right-pointer .pointer {
+    right: 30px;
+}
+
+#err-msg-box .pointer {
+    position: absolute;
+    top: -8px;
+    width: 15px;
+    height: 15px;
+    transform: rotate(45deg);
+    background-color: #3297ea;
+}
+
+#err-msg-box .msg {
+    padding: 10px;
+    padding-right: 25px;
+    font-family: Calibri;
+    color: white;
+}
+
+.form-navi-btn.hr-pos {
+    right: 40px;
+    opacity: 1;
+}
+
+.form-navi-btn.hide-hr-pos {
+    right: 500px;
+    opacity: 0;
+    transition: right 0.5s, opacity 0.5s;
+    -webkit-transition: right 0.5s, opacity 0.5s;
+}
+
+input[type=text],
+input[type=email],
+input[type=password],
+select {
+    width: 100%;
+    height: 30px;
+    box-sizing: border-box;
+    padding-left: 8px;
+    font-family: Calibri;
+    font-size: 1.1em;
     color: darkslategray;
 }
 
-input.hr-line-input {
+.hr-line-input {
     border: none;
     outline: none;
     border-bottom: 1px solid #037ad8;
 }
 
-.firstname-input-wrapper {
-    display: table-cell;
-    padding-right: 12px;
+.err-hr-line-input {
+    border: none;
+    outline: none;
+    border-bottom: 1px solid red;
 }
 
-.lastname-input-wrapper {
+.robot-input-cont {
+    position: absolute;
+    visibility: hidden;
+    z-index: -1;
+}
+
+.input-cont {
+    margin-bottom: 10px;
+}
+
+.input-icon-cont {
+    position: relative;
+    width: 30px;
+    height: 30px;
+    box-sizing: border-box;
+    margin-bottom: -30px;
+    top: -2px;
+    right: 32px;
+    margin-left: 100%;
+}
+
+#email-input, #birthday-input {
+    padding-right: 35px;
+}
+
+.email-input-wrapper .input-icon-cont .fa-question-circle {
+    float: right;
+    margin-top: 4px;
+    margin-right: 4px;
+    font-size: 1.4em;
+    color: #037ad8;
+}
+
+.birthday-input-wrapper .input-icon-cont .fa-calendar-alt {
+    float: right;
+    margin-top: 5px;
+    margin-right: 7px;
+    font-size: 1.3em;
+    color: #037ad8;
+}
+
+.firstname-input-wrapper,
+.countrycode-input-wrapper,
+.birthday-input-wrapper {
     display: table-cell;
-    padding-left: 12px;
+    padding-right: 10px;
+}
+
+.lastname-input-wrapper,
+.phonenumber-input-wrapper,
+.gender-input-wrapper {
+    display: table-cell;
+    padding-left: 10px;
+}
+
+.countrycode-input-wrapper {
+    width: 35%;
+}
+
+.phonenumber-input-wrapper {
+    width: 65%;
+}
+
+.email-input-wrapper .reload-btn-cont > span,
+.username-input-wrapper .reload-btn-cont > span,
+.referralid-input-wrapper .reload-btn-cont > span {
+    font-size: 1.2em;
+    color: #067cd9;
+    padding-top: 6px;
+    padding-left: 4px;
+    cursor: pointer;
+}
+
+.birthday-input-wrapper {
+    width: 60%;
+}
+
+.gender-input-wrapper {
+    width: 40%;
+}
+
+.password-input-wrapper .showpasswd-btn-cont > span {
+    font-size: 1.2em;
+    padding-top: 6px;
+    padding-left: 4px;
+    cursor: pointer;
+}
+
+.password-input-wrapper .showpasswd-btn-cont.hide > span {
+    color: #9da0a2;
+}
+
+.password-input-wrapper .showpasswd-btn-cont.show > span {
+    color: #067cd9;
+}
+
+.passwd-strength-indicator-cont {
+    display: table;
+    width: 100%;
+    margin-top: 14px;
+    padding-left: 4px;
+    padding-right: 4px;
+}
+
+.passwd-strength-indicator-cont .ind-wrapper {
+    display: table-cell;
+    vertical-align: middle;
+    /*width: 20%;*/
+}
+
+.passwd-strength-indicator-cont .txt-ind-wrapper {
+    display: table-cell;
+    width: 35%;
+    vertical-align: middle;
+    text-align: center;
+}
+
+.passwd-strength-indicator-cont .txt-ind-wrapper > span {
+    position: relative;
+    top: -3px;
+    font-size: 0.90em;
+    color: #949494;
+}
+
+.passwd-strength-indicator-cont .ind-wrapper .indicator {
+    height: 6px;
+    margin-left: 3px;
+    margin-right: 3px;
+    border-radius: 10px;
+    background-color: lightgray;
+}
+
+.passwd-strength-indicator-cont .ind-wrapper .indicator.str-clr-1 {
+    background-color: #ff2a2a!important;
+    transition: background-color 0.5s;
+}
+
+.passwd-strength-indicator-cont .ind-wrapper .indicator.str-clr-2 {
+    background-color: #ff762a!important;
+    transition: background-color 0.5s;
+}
+
+.passwd-strength-indicator-cont .ind-wrapper .indicator.str-clr-3 {
+    background-color: #a6ff2a!important;
+    transition: background-color 0.5s;
+}
+
+.passwd-strength-indicator-cont .ind-wrapper .indicator.str-clr-4 {
+    background-color: #2aff42!important;
+    transition: background-color 0.5s;
+}
+
+.passwd-strength-indicator-cont .txt-ind-wrapper > span {
+    color: #3398ea
 }
 
 .firstname-input-wrapper > label,
-.lastname-input-wrapper > label {
+.lastname-input-wrapper > label,
+.country-input-wrapper > label,
+.countrycode-input-wrapper > label,
+.phonenumber-input-wrapper > label,
+.email-input-wrapper > label,
+.birthday-input-wrapper > label,
+.gender-input-wrapper > label,
+.username-input-wrapper > label,
+.password-input-wrapper > label,
+.confirmpasswd-input-wrapper > label,
+.referralid-input-wrapper > label {
     position: relative;
-    top: 18px;
-    padding-left: 10px;
+    top: 24px;
+    right: 0px;
+    padding-left: 8px;
     font-family: Calibri;
     font-size: 1.0em;
+    transition: top 0.2s ease-out, right 0.2s ease-out;
+}
+
+label.push-up {
+    top: 0px;
+    right: 8px;
+    transition: top 0.2s ease-out, right 0.2s ease-out;
 }
 
 .firstname-input-wrapper.lb-normal-color > label,
-.lastname-input-wrapper.lb-normal-color > label {
+.lastname-input-wrapper.lb-normal-color > label,
+.country-input-wrapper.lb-normal-color > label,
+.countrycode-input-wrapper.lb-normal-color > label,
+.phonenumber-input-wrapper.lb-normal-color > label,
+.email-input-wrapper.lb-normal-color > label,
+.birthday-input-wrapper.lb-normal-color > label,
+.gender-input-wrapper.lb-normal-color > label,
+.username-input-wrapper.lb-normal-color > label,
+.password-input-wrapper.lb-normal-color > label,
+.confirmpasswd-input-wrapper.lb-normal-color > label,
+.referralid-input-wrapper.lb-normal-color > label {
     color: #037ad8;
+}
+
+#email-input:disabled,
+#username-input:disabled,
+#referralid-input:disabled {
+    background-color: unset;
+    color: rgb(136, 136, 136);
+}
+
+.f-upload-h {
+    margin-bottom: 15px;
+    text-align: justify;
+    font-family: Calibri;
+    font-size: 0.95em;
+    font-weight: normal;
+    color: #0178d7;
+}
+
+#f-upload-input,
+#acceptterms-input {
+    width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
+}
+
+#f-upload-input + label {
+    display: inline-block;
+    padding: 6px 20px;
+    border-radius: 5px;
+    font-family: Calibri;
+    font-size: 1.0em;
+    color: white;
+    cursor: default;
+    background: rgb(0, 120, 215);
+    background: -webkit-linear-gradient(120deg, rgb(65, 161, 240), rgb(0, 120, 215));
+    background: -o-linear-gradient(120deg, rgb(65, 161, 240), rgb(0, 120, 215));
+    background: -moz-linear-gradient(120deg, rgb(65, 161, 240), rgb(0, 120, 215));
+    background: linear-gradient(120deg, rgb(65, 161, 240), rgb(0, 120, 215));
+}
+
+#f-upload-msg {
+    display: table;
+    width: 100%;
+    min-height: 35px;
+    margin-top: 10px;
+    margin-bottom: 25px;
+}
+
+#f-upload-msg.error {
+    background-color: rgba(255, 210, 146, 0.5);
+}
+
+#f-upload-msg.no-error {
+    background-color: rgba(146, 255, 178, 0.5);
+}
+
+#f-upload-msg.error .bar {
+    display: table-cell;
+    min-width: 4px;
+    background-color: rgba(253, 62, 62, 0.5);
+}
+
+#f-upload-msg.no-error .bar {
+    display: table-cell;
+    min-width: 4px;
+    background-color: rgba(51, 234, 72, 0.5);
+}
+
+#f-upload-msg .msg {
+    display: table-cell;
+    vertical-align: middle;
+    padding-left: 10px;
+    font-size: 0.95em;
+}
+
+.acceppterms-cont {
+    display: table;
+    width: 100%;
+}
+
+.acceppterms-cont .item-1 {
+    display: table-cell;
+    min-width: 40px;
+}
+
+.acceppterms-cont .item-2 {
+    display: table-cell;
+    vertical-align: top;
+}
+
+.acceppterms-cont .item-2 > p {
+    padding: 0px;
+    margin: 0px;
+    font-family: Calibri;
+    font-size: 1.0em;
+    color: #0179d7;
+}
+
+label[for=acceptterms-input] {
+    display: inline-block;
+    width: 19px;
+    height: 19px;
+    cursor: pointer;
+    overflow: hidden;
+}
+
+label[for=acceptterms-input] > img {
+    position: relative;
+    height: 18px;
+    width: 37px;
+}
+
+#acceptterms-input:checked + .acceppterms-cont .item-1 label > img {
+    right: 19px;
+}
+
+#acceptterms-input:checked ~ .reg-btn-cont .reg-btn:hover {
+    box-shadow: 0px 2px 4px 1px gray;
+}
+
+.acceppterms-cont .terms-link {
+    color: #0179d7;
+}
+
+.form-navigation-cont .form-navi-btn {
+    display: inline-block;
+    position: relative;
+    text-align: center;
+    width: 42px;
+    height: 42px;
+    box-sizing: border-box;
+    border: none;
+    outline: none;
+    margin-left: 100%;
+    font-size: 1.0em;
+    color: white;
+    cursor: default;
+    background: rgb(0, 120, 215);
+    background: -webkit-linear-gradient(120deg, rgb(65, 161, 240), rgb(0, 120, 215)); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(120deg, rgb(65, 161, 240), rgb(0, 120, 215)); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(120deg, rgb(65, 161, 240), rgb(0, 120, 215)); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(120deg, rgb(65, 161, 240), rgb(0, 120, 215)); /* Standard syntax */
+}
+
+.form-navigation-cont .form-navi-btn:hover,
+#f-upload-input + label:hover {
+    box-shadow: 0px 2px 4px 1px gray;
+}
+
+.form-navigation-cont .form-navi-btn > span {
+    margin-top: 0.1em;
+}
+
+.form-navigation-cont {
+    position: absolute;
+    width: 100%;
+    bottom: 0px;
+}
+
+.form-navi-btn-cont {
+    padding: 0 20px 0 40px;
+    margin-bottom: 18px;
+}
+
+.form-progress-bar-cont {
+    padding: 0 26px 0 40px;
+    margin-bottom: 15px;
+}
+
+.form-progress-bar-cont .progress-bar-wrapper {
+    display: table-cell;
+    width: 100%;
+}
+
+.form-progress-bar-cont .progress-bar-bg {
+    height: 7px;
+    border-radius: 10px;
+    background-color: rgb(153, 179, 221);
+}
+
+.form-progress-bar-cont .progress-bar {
+    height: 7px;
+    border-radius: 10px;
+    background: -webkit-linear-gradient(120deg, rgb(0, 120, 215), rgb(65, 161, 240)); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(120deg, rgb(0, 120, 215), rgb(65, 161, 240)); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(120deg, rgb(0, 120, 215), rgb(65, 161, 240)); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(120deg, rgb(0, 120, 215), rgb(65, 161, 240)); /* Standard syntax */
+}
+
+.form-progress-bar-cont .progress-bar.stage-1 {
+    width: 33%;
+    transition: width 2s;
+}
+
+.form-progress-bar-cont .progress-bar.stage-2 {
+    width: 66%;
+    transition: width 2s;
+}
+
+.form-progress-bar-cont .progress-bar.stage-3 {
+    width: 100%;
+    transition: width 2s;
+}
+
+.form-progress-bar-cont .progress-number {
+    display: table-cell;
+    min-width: 45px;
+    text-align: right;
+    font-family: Calibri;
+    font-size: 1.0em;
+    color: #057bd9;
+}
+
+.reg-btn-cont {
+    margin-top: 50px;
+    text-align: center;
+}
+
+.reg-btn {
+    box-sizing: border-box;
+    border: none;
+    outline: none;
+    padding: 8px 50px;
+    border-radius: 20px;
+    font-family: Calibri;
+    font-size: 1.0em;
+    color: white;
+    cursor: default;
+    background: rgb(0, 120, 215);
+    background: -webkit-linear-gradient(120deg, rgb(65, 161, 240), rgb(0, 120, 215));
+    background: -o-linear-gradient(120deg, rgb(65, 161, 240), rgb(0, 120, 215));
+    background: -moz-linear-gradient(120deg, rgb(65, 161, 240), rgb(0, 120, 215));
+    background: linear-gradient(120deg, rgb(65, 161, 240), rgb(0, 120, 215));
+}
+
+.csrf-input-cont {
+    position: absolute;
+    z-index: -1;
+    visibility: hidden;
 }
