--- a/public_html/styles/register.css
+++ b/public_html/styles/register.css
@@ -606,6 +606,7 @@ label.push-up {
 
 #f-upload-msg .msg {
     display: table-cell;
+    width: 100%;
     vertical-align: middle;
     padding-left: 10px;
     font-size: 0.95em;
